<resources>
    <string name="facebook_app_id">1011245595574360</string>
    <string name="gcm_defaultSenderId">140592538620</string>

    <string name="app_name">Ohayou</string>

    <string name="hint_input_email">Input your Email to login or sign up</string>
    <string name="hint_setup_password">Setup a password</string>
    <string name="hint_input_password">Input your password</string>
    <string name="hint_your_comment">Your comment</string>
    <string name="hint_your_email">Your email(Optional)</string>

    <string name="dialog_optional_update">A new version of Ohayou is available.</string>
    <string name="dialog_btn_update">Upgrade Now</string>
    <string name="dialog_btn_skip">Skip</string>
    <string name="dialog_btn_exit">Exit</string>

    <string name="prompt_user_exist">The user already exists. Please sign in.</string>

    <string name="rate_at_google_play">Rate us at Google Play</string>
    <string name="clear_download">Clear Cache(%s)</string>
    <string name="version">Version %s</string>

    <string name="downloading">Downloading</string>
    <string name="download_fail">Download fail, please try later!</string>
    <string name="download_textbook_fail">Failed to download textbook(%s)!</string>
    <string name="unzip_textbook_fail">Failed to decompress textbook(%s)!</string>
    <string name="btn_next">Next</string>
    <string name="btn_facebook">Login with Facebook</string>
    <string name="or">OR</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="all">All</string>
    <string name="download">Download</string>
    <string name="start">Start</string>
    <string name="continue_">Continue</string>
    <string name="level">Level:</string>
    <string name="store">Store</string>
    <string name="settings">Settings</string>
    <string name="delete_downloaded_textbooks">Delete Downloaded Textbooks</string>
    <string name="feedback">Feedback</string>
    <string name="resources">Resources</string>
    <string name="script">Script</string>
    <string name="translate">Translate</string>
    <string name="submit">Submit</string>
    <string name="remaining_points">Remaining Points</string>
    <string name="buy_points">Buy points:</string>
    <string name="enter_promo">Enter promo code and earn points:</string>
    <string name="complete_tasks">Complete tasks and earn points:</string>
    <string name="redeem_points">Redeem points:</string>
    <string name="redeem">Redeem</string>
    <string name="task_tapjoy">Tapjoy</string>
    <string name="points">Points</string>
    <string name="point">Point</string>
    <string name="task_supersonic">Supersonic</string>
    <string name="task_adgate">Watch a Video (Earn 15 Points)</string>
    <string name="remove_ads">Remove ADs</string>
    <string name="remove_ads_comment">Remove ADs forever</string>
    <string name="view_script">View script</string>
    <string name="check">Check</string>
    <string name="the_correct_answer">The Correct Answer:</string>
    <string name="correct">Correct!</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="done">Done!</string>
    <string name="get_started">Let\'s get started!</string>
    <string name="complete_content0">Congratulations! You’ve completed all questions in this textbook!</string>
    <string name="complete_content1">%d points have been credited into your account as a reward of finishing the textbook for the 1st time!</string>
    <string name="points_add">%d points have been successfully added to your account!</string>
    <string name="redo">Redo</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="go_to_store">Go to Store</string>
    <string name="maybe_later">May Be Later</string>
    <string name="return_home">Return Home</string>
    <string name="stop_and_return">Are you sure to stop and return to homepage (you can continue later)?</string>
    <string name="questions_not_ready">Questions is loading, retry later!</string>
    <string name="script_dict">Script and dictionary</string>
    <string name="click_to_enlarge">(Click to enlarge)</string>
    <string name="script_dict_comment">You can view the script of every sound track and click on any word to look up its definition</string>
    <string name="tab_elsewhere">Tab elsewhere to close</string>
    <string name="from_google">- from Google Translate</string>
    <string name="select_to_translate">Please select the word that you don’t know to see its translation</string>
    <string name="back_to_scripts">Back to scripts</string>
    <string name="connection_fail">Connection error. Please try again later or contact support team.</string>
    <string name="redeemed">Redeemed</string>
    <string name="prompt_for_purchase">Are you sure to purchase \"%1$s\" with %2$d points\?</string>
    <string name="successfully_purchase">You have just successfully redeemed %1$d points for \"%2$s\"!</string>
    <string name="points_not_sufficient">You do not have sufficient points. Please purchase more points.</string>
    <string name="script_purchase">Script Purchase</string>
    <string name="buy_one_soundtrack">Buy 1 Soundtrack</string>
    <string name="buy_textbook_soundtracks">Buy %1$d Soundtracks</string>
    <string name="buy_all_soundtracks">Buy All Soundtracks</string>
    <string name="view_current_script">View the script of the current soundtrack</string>
    <string name="view_textbook_scripts">View the script of all soundtracks in this textbook</string>
    <string name="view_all_scripts">View the script of all soundtracks in Ohayou app</string>
    <string name="loading_inventory">Loading Inventory, Please try later!</string>
    <string name="redeemed_points_for_script">You’ve just successfully redeemed %d points. You can view the script now. </string>
    <string name="not_sufficient_points_for_script">You do not have sufficient points. Do you want to go to Ohayou store and purchase more points? (Your progress will be saved and you can always resume later.) </string>
    <string name="purchase_cancel">The purchase has been canceled.</string>
    <string name="no_textbook">No textbook!</string>
</resources>
