<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/bar_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/feedback"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1000">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="400"
            android:padding="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_your_comment"
            android:gravity="top"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_your_email"
            android:gravity="top"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/btn_big_disabled"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>