<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="1000">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="150" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_app" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:singleLine="true"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_input_email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_big_disabled"
            android:text="@string/btn_next"
            android:clickable="false"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="250" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/disabled" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/or"
                android:textColor="@color/disabled"
                android:textSize="18sp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/disabled" />
        </LinearLayout>

        <TextView
            android:id="@+id/btn_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_big_facebook"
            android:text="@string/btn_facebook"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel"
        android:textColor="@color/disabled"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>