<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green_normal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/bar_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/settings"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@android:color/white"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_at_google_play"
                android:gravity="center"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:drawableLeft="@drawable/icon_rate"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_dic"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/clear_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_download"
                android:gravity="center"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:textScaleX="0.9"
                android:drawableLeft="@drawable/icon_clear"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_dic"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginTop="1dp"
            android:background="@android:color/white"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:gravity="center"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:drawableLeft="@drawable/icon_info"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>