<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_normal"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/bar_menu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/store_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="0"
                android:gravity="center"
                android:textColor="@color/home_score"
                android:drawableLeft="@drawable/bar_store"
                android:drawablePadding="3dp"
                android:textSize="15sp"/>
        </LinearLayout>
        <HorizontalScrollView
            android:id="@+id/category_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_normal"
            android:scrollbars="none"
            android:fillViewport="false">
            <LinearLayout
                android:id="@+id/tabs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            </LinearLayout>
        </HorizontalScrollView>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ListView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </android.support.v4.widget.SwipeRefreshLayout>
        <RelativeLayout
            android:id="@+id/adViewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/navi"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white">
        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/illustration_left"
            android:text="forocean@qq.com"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:gravity="bottom"
            android:padding="18dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store"
                    android:gravity="center"
                    android:drawablePadding="20dp"
                    android:textSize="18sp"
                    android:drawableLeft="@drawable/icon_store"/>
                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="18sp"
                    android:text="100"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:gravity="center_vertical"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:drawableLeft="@drawable/icon_setting"/>
            <TextView
                android:id="@+id/feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:gravity="center_vertical"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:drawableLeft="@drawable/icon_feedback"/>
            <TextView
                android:id="@+id/resource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resources"
                android:gravity="center_vertical"
                android:drawablePadding="20dp"
                android:textSize="18sp"
                android:padding="15dp"
                android:drawableLeft="@drawable/icon_rate"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:paddingBottom="20dp"
            android:src="@mipmap/ic_launcher"/>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>